--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "archiver": "^3.0.0",
     "koa": "^2.5.3",
+    "koa-body": "^4.2.0",
     "koa-gzip": "^0.1.0",
     "koa-nunjucks-2": "^3.0.2",
     "koa-router": "^7.4.0",
